force-app/main/default/objects/Compliance_Assignment__c/Compliance_Assignment__c.object-meta.xml
<CustomObject>
    <label>Associated Compliance Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Company Compliance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Compliances Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>