force-app/main/default/objects/Compliance_Assignment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Associated Compliances Items</relationshipLabel>
    <relationshipName>Legal_Entity_Compliance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>