force-app/main/default/objects/Compliance_Assignment__c/fields/Compliance_Item__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Item</label>
    <referenceTo>Compliances_Item__c</referenceTo>
    <relationshipLabel>Associated Compliance Items</relationshipLabel>
    <relationshipName>Legal_Entity_Compliance1</relationshipName>
    <type>Lookup</type>
</CustomField>