force-app/main/default/objects/Compliance_Assignment__c/fields/Next_Task_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Creation_Date__c</fullName>
    <label>Next Task Creation Date</label>
    <type>Date</type>
</CustomField>