force-app/main/default/objects/Compliance_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compliance_Item__c</columns>
    <columns>Company__c</columns>
    <columns>Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>